--- a/Travel_Agent/packages.config
+++ b/Travel_Agent/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ClosedXML" version="0.76.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="ClosedXML" version="0.76.0" targetFramework="net452" />
   <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net452" />
-  <package id="NLog" version="4.2.3" targetFramework="net452" requireReinstallation="true" />
+  <package id="NLog" version="4.2.3" targetFramework="net452" />
 </packages>
