--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: csharp
 solution: Smile_Travel_Solution.sln
+
+before_deploy: 
+  - ./pre_deploy.sh
 deploy:
   provider: releases
   api_key:
