--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: csharp
 solution: Smile_Travel_Solution.sln
 
-before_deploy: ./pre_deploy.sh
+before_deploy: 
+  - - chmod +x ./pre_deploy.sh
+  - ./pre_deploy.sh
 deploy:
   provider: releases
   api_key:
